--- a/source/index.html
+++ b/source/index.html
@@ -10,8 +10,8 @@
 <body class="page-body">
   <header class="page-header">
     <nav class="navigation">
-      <a class="page-header__logo">
-        <img src="img/logo-full.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
+      <a>
+        <img class="page-header__logo" src="img/logo-full.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
       </a>
       <ul class="navigation__list">
           <li class="navigation__item">
